--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,207 @@
-body {
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  padding: 0;
+  box-sizing: inherit; }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+html {
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box;
+  background-color: #e6e7ea;
+  color: #5a5c66;
+  font-family: Roboto;
+  padding-top: 2.3rem;
+  padding-inline: 7.8rem; }
+
+/**************************/
+/* BELOW 688px */
+/**************************/
+@media (max-width: 43em) {
+  html {
+    /* 1rem = 9px */
+    font-size: 56.25%; }
+  body {
+    padding-inline: 4.8rem; } }
+
+/**************************/
+/* BELOW 512px */
+/**************************/
+@media (max-width: 32em) {
+  html {
+    /* 1rem = 8px */
+    font-size: 50%; }
+  body {
+    padding-inline: 2.5rem; } }
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 101rem;
+  padding-block: 1.6rem;
+  margin-bottom: 3rem; }
+
+.btn {
+  font-size: 2.4rem;
+  font-weight: 500;
+  line-height: 3.3rem;
+  color: #474955;
+  border: none;
+  background-color: transparent;
+  margin-inline: 4.6rem;
+  cursor: pointer;
+  transition: all 0.3s; }
+  .btn:hover {
+    color: #5a5c66;
+    transform: translateY(-2px); }
+  .btn:active {
+    transform: translateY(2px); }
+
+.pagination {
+  font-style: italic;
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.5rem;
+  cursor: pointer; }
+  .pagination > *:not(:first-child) {
+    margin-left: 1rem; }
+  .pagination * {
+    transition: all 0.5s;
+    display: inline-block;
+    text-decoration: none;
+    color: #5a5c66; }
+  .pagination *:hover {
+    color: #5a5c66;
+    transform: translateY(-2px); }
+  .pagination *:active {
+    transform: translateY(2px); }
+
+.active {
+  color: #7ebc3c; }
+  .active:hover {
+    color: #69a726; }
+
+/**************************/
+/* BELOW 688px */
+/**************************/
+@media (max-width: 43em) {
+  .btn {
+    margin-inline: 2.5rem; } }
+
+/**************************/
+/* BELOW 512px */
+/**************************/
+@media (max-width: 32em) {
+  .btn {
+    margin-inline: 2rem; } }
+
+table {
+  max-width: 101rem;
+  width: 100%;
+  height: 72vh;
+  margin-block: 1.5rem 6rem;
+  border-collapse: collapse;
+  font-size: 1.4rem; }
+
+thead {
+  display: grid;
+  grid-template-columns: 10% 1.2fr 1fr;
+  font-weight: 600;
+  color: #ffffff;
+  background-color: #474955; }
+  thead tr {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5.5rem;
+    border: 1px solid rgba(90, 92, 102, 0.1); }
+    thead tr th {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      max-width: 17rem;
+      width: 100%; }
+
+tbody {
+  display: grid;
+  height: 100%; }
+  tbody tr {
+    display: grid;
+    grid-template-columns: 10% 1.2fr 1fr; }
+    tbody tr td {
+      display: flex;
+      align-items: center;
+      border: 1px solid rgba(90, 92, 102, 0.1);
+      padding: 1.1rem 2.2rem; }
+      tbody tr td:first-child {
+        justify-content: center; }
+
+.icon {
+  width: 21px;
+  height: 21px;
+  cursor: pointer;
+  transition: all 0.5s; }
+
+.active {
+  transform: rotateX(180deg); }
+
+/**************************/
+/* BELOW 512px */
+/**************************/
+@media (max-width: 32em) {
+  tbody tr td {
+    padding: 0.8rem 1.8rem; } }
+
+.searchContainer {
+  font-size: 3rem;
+  max-width: 63rem;
+  height: 5.2rem;
+  background-color: #5a5c66;
+  padding: 1.4rem 2.2rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  position: relative; }
+
+input {
+  background-color: transparent;
+  padding: 0.2rem 0.4rem;
+  border: none;
+  color: #e6e7ea;
+  width: 100%;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 2rem;
+  outline: none; }
+  input::placeholder {
+    color: #b2b7bf;
+    font-size: 1.4rem; }
+  input:focus {
+    color: #b2b7bf;
+    box-shadow: 0 0 0 0.1rem rgba(230, 231, 234, 0.9); }
+
+.btn--search {
+  width: 2.1rem;
+  height: 2.1rem;
+  cursor: pointer;
+  color: #ffffff;
+  transition: all 0.3s; }
+  .btn--search:active {
+    transform: translateY(3px); }
+
+.resultContainer {
+  position: absolute;
+  top: 110%;
+  left: 0;
+  width: 100%;
+  height: 3rem;
+  z-index: 2;
+  box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+  background-color: #e6e7ea;
+  border: 1px solid #474955; }
+
+.foundData {
+  height: 70vh !important;
+  overflow-y: scroll; }
