--- a/src/components/_List.module.scss
+++ b/src/components/_List.module.scss
@@ -64,6 +64,13 @@ tbody {
   transform: rotateX(180deg);
 }
 
+.error {
+  color: red;
+  font-size: 2.4rem;
+  margin-top: 3rem;
+  text-align: center;
+}
+
 /**************************/
 /* BELOW 512px */
 /**************************/
