--- a/src/components/_SearchResult.module.scss
+++ b/src/components/_SearchResult.module.scss
@@ -2,14 +2,14 @@
 
 .resultContainer {
   position: absolute;
-  top: 110%;
+  top: 100%;
   left: 0;
   width: 100%;
   height: 3rem;
   z-index: 2;
   box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
   background-color: $color-white-100;
-  border: 1px solid $color-grey-500;
+  border: 1px solid rgba($color-grey-500, 0.1);
 }
 
 .foundData {
